# TP-CCpp-HW1

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
ci/: install.sh  run.sh
project/include/: io_list_operations.h  list_management.h  list_managment.h  module.h
project/src/: io_list_operations.c  list_management.c  list_managment.c  main.c  module.c
project/testing/: CMakeLists.txt
project/testing/data/case1/: in.txt  out.txt
project/testing/data/case2/: in.txt  out.txt
project/testing/data/case3/: in.txt  out.txt
project/testing/data/case4/: out.txt
project/testing/include/: utils.h
project/testing/src/: io_tests.cpp  managements_tests.cpp  utils.cpp
